--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eclecticiq-ui-engineer-code-challenge",
+  "name": "test-task-advices",
   "jest": {
     "verbose": true
   },
@@ -12,7 +12,6 @@
     "@testing-library/react": "11.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-fetch-hook": "1.8.5",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
